# note-circle

./: Cargo.toml  README.md  index.html
.github/workflows/: deploy.yml
src/: circle.rs  keyboard.rs  main.rs  sound.rs  string.rs
